Update LinkedIn and Github URL

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <strong>EC2 Monitoring with AWS CloudWatch & SNS</strong><br>
       Implemented system monitoring using CloudWatch Agent on EC2 for CPU, memory, disk, and network metrics. Set up CloudWatch Alarms with SNS email notifications for proactive alerts.
     </li>
-    
+
   </ul>
 </section>
 
@@ -186,8 +186,8 @@ Lahore, Pakistan.</h3>
         <!-- <p>Find me on <a href="https://www.linkedin.com">LinkedIn</a> | <a href="https://github.com">GitHub</a></p> -->
     <p>
     Find me on
-    <a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i> LinkedIn</a> |
-    <a href="https://github.com"><i class="fab fa-github"></i> GitHub</a>
+    <a href="https://www.linkedin.com/in/fiaz-shafqat-b356a195/"><i class="fab fa-linkedin"></i> LinkedIn</a> |
+    <a href="https://github.com/Fiazshafqat"><i class="fab fa-github"></i> GitHub</a>
 </p>
 
     </footer>
