--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section class="summary">
     <h2>Summary</h2>
-    <<p>I am an experienced IT Systems and Cloud Engineer with over 10 years of experience in managing and supporting IT infrastructure. I have worked with both Windows and Linux servers, network equipment, and cloud platforms like AWS and Azure.
+    <p>I am an experienced IT Systems and Cloud Engineer with over 10 years of experience in managing and supporting IT infrastructure. I have worked with both Windows and Linux servers, network equipment, and cloud platforms like AWS and Azure.
             I have strong hands-on experience with cloud services such as AWS EC2, S3, RDS, VPC, IAM, CloudWatch, and Azure VMs, Storage, Resource Groups, and Azure Monitor. I can design, deploy, and secure cloud environments for various types of organizations.
             I am also actively learning and exploring DevOps tools like Jenkins, Docker, Kubernetes, and Terraform. I'm excited to understand how these tools help automate CI/CD pipelines and improve software delivery. I enjoy working in teams, learning through real-world challenges, and continuously improving systems through collaboration and hands-on practice.</p>
     
